# mini_game

./: .gitignore
firmware/: CMakeLists.txt  sdkconfig.old
firmware/.cache/clangd/index/: mini_game.c.0167616E446C3A9C.idx  mini_game.c.BA5FB352A641E9EE.idx  mini_game.h.17D43DDCF5AF665F.idx  mini_game.h.61901AC177F98036.idx  ssd1306.h.6D50FB90D9EEB283.idx  ssd1306.h.6D9FD2078236F665.idx  ssd1306_core.c.47559D7C677B9867.idx  ssd1306_core.c.B0BB4A208DD59BF9.idx  ssd1306_font.c.0EB096BC7B39D0C2.idx  ssd1306_font.c.BD24FBB6405D9523.idx  ssd1306_font.h.50B73D50B045B152.idx  ssd1306_font.h.ACDF17AE17F0E1E9.idx  ssd1306_i2c.c.06AACCA6F1C1D3CC.idx  ssd1306_i2c.c.10A5449560EF7199.idx  ssd1306_private.h.262D125954F5EF0D.idx  ssd1306_private.h.A4C31FE79A54F375.idx  ssd1306_spi.c.7766C2F7A124DA98.idx  ssd1306_spi.c.CBAFF7FEB0715D1B.idx
firmware/components/controller_driver/: CMakeLists.txt  idf_component.yml
firmware/components/device_system/: CMakeLists.txt  device_system.c
firmware/components/game_engine/: CMakeLists.txt  game_engine.c  idf_component.yml
firmware/components/sound_driver/: CMakeLists.txt  idf_component.yml
firmware/components/ssd1306/: CMakeLists.txt  idf_component.yml
firmware/components/ssd1306/include/: ssd1306.h
firmware/components/ssd1306/src/: ssd1306_core.c
firmware/lib/: battery.c  battery.h  display.c  display.h  font.h  game.c  game.h  tracks.c  tracks.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.c  main.h
hardware/: Mini_Game.bak  _autosave-mini_game.kicad_sch  mini_game.kicad_prl  mini_game.kicad_pro  mini_game.kicad_sch
(+16 files in other folders)
